@@ -2,10 +2,11 @@
 /**
 * Podcast Manager for Joomla!
 *
-* @copyright	Copyright (C) 2011 Michael Babker. All rights reserved.
-* @license		GNU/GPL - http://www.gnu.org/copyleft/gpl.html
-* @package		PodcastManager
-* @subpackage	plg_editors-xtd_podcastmanager
+* @package     PodcastManager
+* @subpackage  plg_editors-xtd_podcastmanager
+*
+* @copyright   Copyright (C) 2011 Michael Babker. All rights reserved.
+* @license     GNU/GPL - http://www.gnu.org/copyleft/gpl.html
 *
 * Podcast Manager is based upon the ideas found in Podcast Suite created by Joe LeBlanc
 * Original copyright (c) 2005 - 2008 Joseph L. LeBlanc and released under the GPLv2 license
@@ -14,25 +15,28 @@
 /**
  * Installation class to perform additional changes during install/uninstall/update
  *
- * @package		PodcastManager
- * @subpackage	plg_editors-xtd_podcastmanager
- * @since	1.6
+ * @package     PodcastManager
+ * @subpackage  plg_editors-xtd_podcastmanager
+ * @since       1.6
  */
-class plgEditorsXtdPodcastManagerInstallerScript {
-
+class plgEditorsXtdPodcastManagerInstallerScript
+{
 	/**
 	 * Function to act prior to installation process begins
 	 *
-	 * @param	string	$type	The action being performed
-	 * @param	string	$parent	The function calling this method
+	 * @param   string  $type    The action being performed
+	 * @param   string  $parent  The function calling this method
 	 *
-	 * @return	void
-	 * @since	1.7
+	 * @return  void
+	 *
+	 * @since   1.7
 	 */
-	function preflight($type, $parent) {
+	function preflight($type, $parent)
+	{
 		// Requires Joomla! 1.7
 		$jversion = new JVersion();
-		if (version_compare($jversion->getShortVersion(), '1.7', 'lt')) {
+		if (version_compare($jversion->getShortVersion(), '1.7', 'lt'))
+		{
 			JError::raiseNotice(null, JText::_('PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_INSTALL_J17'));
 			return false;
 		}
@@ -41,29 +45,34 @@ class plgEditorsXtdPodcastManagerInstallerScript {
 	/**
 	 * Function to perform changes when plugin is initially installed
 	 *
-	 * @param	$parent
+	 * @param   string  $parent  The function calling this method
 	 *
-	 * @return	void
-	 * @since	1.6
+	 * @return  void
+	 *
+	 * @since   1.6
 	 */
-	function install($parent) {
+	function install($parent)
+	{
 		$this->activateButton();
 	}
 
 	/**
 	 * Function to activate the button at installation
 	 *
-	 * @return	void
-	 * @since	1.7
+	 * @return  void
+	 *
+	 * @since   1.7
 	 */
-	function activateButton() {
+	function activateButton()
+	{
 		$db = JFactory::getDBO();
-		$query	= $db->getQuery(true);
+		$query = $db->getQuery(true);
 		$query->update($db->quoteName('#__extensions'));
 		$query->set($db->quoteName('enabled').' = 1');
-		$query->where($db->quoteName('name').' = "plg_editors-xtd_podcastmanager"');
+		$query->where($db->quoteName('name').' = '.$db->quote('plg_editors-xtd_podcastmanager'));
 		$db->setQuery($query);
-		if (!$db->query()) {
+		if (!$db->query())
+		{
 			JError::raiseNotice(1, JText::_('PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_ACTIVATING_PLUGIN'));
 		}
 	}
